# libgeos

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.pgtest  Dockerfile.pytest  Dockerfile.rtest  NEWS  NEWS.md  build_docker.sh
.github/workflows/: ci.yml  ci_windows.yml  container.yml
benchmarks/: ClassSizes.cpp
benchmarks/index/: CMakeLists.txt  GEOSSTRtreePerfTest.cpp  SpatialIndexPerfTest.cpp
capi/: CMakeLists.txt  geos_c.cpp  geos_c.h.in  geos_ts_c.cpp
cmake/: geos-configure-file.cmake  geos-get-version-source.cmake  write-geos-version-header.cmake
doc/: CMakeLists.txt  Doxyfile  example.cpp
include/geos/: export.h  util.h
src/: CMakeLists.txt  inlines.cpp
src/algorithm/: CircularArcIntersector.cpp  CircularArcs.cpp  ConvexHull.cpp  LineIntersector.cpp  MinimumBoundingCircle.cpp  PointLocator.cpp  RayCrossingCounter.cpp
src/edgegraph/: HalfEdge.cpp
src/geom/: CircularArc.cpp  CircularString.cpp  Coordinate.cpp  CoordinateArraySequence.cpp  CoordinateSequence.cpp  Envelope.cpp  GeometryCollection.cpp  GeometryFactory.cpp  LineSegment.cpp  LineString.cpp  LinearRing.cpp  MultiLineString.cpp  MultiPoint.cpp  MultiPolygon.cpp  Point.cpp  Polygon.cpp  PrecisionModel.cpp  Surface.cpp
src/geomgraph/: EdgeEndStar.cpp  GeometryGraph.cpp
src/index/: VertexSequencePackedRtree.cpp
src/io/: WKBReader.cpp  WKTReader.cpp  WKTWriter.cpp
src/linearref/: ExtractLineByLocation.cpp  LengthLocationMap.cpp  LinearIterator.cpp  LinearLocation.cpp  LocationIndexOfLine.cpp  LocationIndexOfPoint.cpp
src/noding/: ArcIntersectionAdder.cpp  (+11 more)
(+308 files in other folders)
